--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -9,5 +9,6 @@
   </view>
   <view class="usermotto">
     <text class="user-motto">{{motto}}</text>
+    <button bindtap="clickMe">点我</button>
   </view>
 </view>
