添加 map 组件的使用和扫一扫功能的使用

--- a/app.wxss
+++ b/app.wxss
@@ -7,4 +7,14 @@
   justify-content: space-between;
   padding: 200rpx 0;
   box-sizing: border-box;
-} 
+}
+
+navigator {
+  width: 184px;
+  margin: 0 auto;
+  text-align: center;
+  background-color: #409EFF;
+  line-height: 40px;
+  color: white;
+  font-weight: bold;
+}
