--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -9,6 +9,8 @@
   </view>
   <view class="usermotto">
     <text class="user-motto">{{motto}}</text>
-    <button bindtap="clickMe">点我</button>
+    <button bindtap="clickMe">{{buttonText}}</button>
+    <navigator url="/pages/map/map">前往地图组件页面</navigator>
+    <button bindtap="handleSAOYISAO">点击扫一扫</button>
   </view>
 </view>
