优化 map 组件的使用
添加了气泡点等内容

--- a/pages/map/map.wxml
+++ b/pages/map/map.wxml
@@ -1,4 +1,4 @@
 <!-- map.wxml -->
 <view>
-  <map name="map-test" longitude="{{longitude}}" latitude="{{latitude}}"></map>
+  <map name="map-test" longitude="{{longitude}}" latitude="{{latitude}}" markers="{{markers}}"></map>
 </view>
