修改写法，并准备添加 navbar 组件

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,4 +1,9 @@
 <!--index.wxml-->
+<page-meta>
+  <navigation-bar>
+  </navigation-bar>
+</page-meta>
+
 <view class="container">
   <view class="userinfo">
     <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
