--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,9 +1,5 @@
 <!--index.wxml-->
-<page-meta>
-  <navigation-bar>
-  </navigation-bar>
-</page-meta>
-
+<navbar/>
 <view class="container">
   <view class="userinfo">
     <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
