各业添加自定义 navbar

--- a/pages/map/map.wxml
+++ b/pages/map/map.wxml
@@ -1,4 +1,5 @@
 <!-- map.wxml -->
+<navbar />
 <view>
   <map name="map-test" longitude="{{longitude}}" latitude="{{latitude}}" markers="{{markers}}"></map>
 </view>
