--- a/pages/map/map.wxss
+++ b/pages/map/map.wxss
@@ -1,10 +1,5 @@
-page {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
-
 map {
+  width: 100%;
   height: 300px;
+  margin-top: 40rpx;
 }
