修改 navbar 组件样式，处于 fixed 状态

--- a/components/navbar/navbar.wxml
+++ b/components/navbar/navbar.wxml
@@ -3,3 +3,4 @@
   <image src="/images/nav-icon.png"></image>
   <text style="line-height:{{textLineHeight}}px">DayDay的工坊</text>
 </view>
+<view style="width: 100%; height: {{height}}px"></view>
