调整 navbar title 文本

--- a/components/navbar/navbar.wxml
+++ b/components/navbar/navbar.wxml
@@ -1,6 +1,6 @@
 <!-- navbar component -->
 <view class="class navbar" style="height:{{height}}px; padding-top:{{paddingTop}}px;">
   <image src="/images/nav-icon.png"></image>
-  <text style="line-height:{{textLineHeight}}px">DayDay的工坊</text>
+  <text style="line-height:{{textLineHeight}}px">{{title}}</text>
 </view>
 <view style="width: 100%; height: {{height}}px"></view>
